<resources>
    <string name="app_name">Sesion2GUI</string>
    <string name="titulo">Formulario de Registro</string>
    <string name="nombre">Nombre</string>
    <string name="cedula">Cédula</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="repita_contrasena">Repita Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="error_contrasenas">Las contraseñas no son iguales</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="cine">Cine</string>
    <string name="ps4">PS4</string>
    <string name="series">Series</string>
    <string name="ciudad_nacimiento">Ciudad de Nacimiento</string>
    <string name="fecha_nacimiento">MM/dd/yyyy</string>
    <string name="fecha_nacimiento_label">Fecha de Nacimiento</string>
    <string name="otra_actividad">Otra actividad</string>
    <string name="otra_actividad_mas">Otra actividad mas</string>

    <string-array name="lista_ciudades">
        <item>Seleccione una ciudad</item>
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Barranquilla</item>
        <item>Cali</item>
    </string-array>

</resources>